k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  selector:
    app: frontend-app
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
