k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  #   - hosts:
  #       - se.client
  #     secretName: demo-react-secret
  rules:
    - host: se.server
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-app
                port:
                  number: 1337
    - host: se.client
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-app
                port:
                  number: 3000
